# vodsl

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  DataModelDesign.md  Developing.md  Readme.md  VODML.md  VODSL.product  VODSLEditor.setup  pom.xml
doc/: .gitignore  Makefile  VODSL.tex  gitmeta.tex
eclipse.repository/: category.xml  pom.xml  vodsleditor.product
eclipse.target/: eclipse.vodsl.target.target  pom.xml
javafxbundle/: pom.xml
mavenbase/: pom.xml
models/: Characterization.vodsl  Cube2.4.1.vodsl  CubeDM-1.0.vodsl  DatasetMetadata-1.0-GL.vodsl  IVOA.vodsl  ObsCore.vodsl  PhotDM-alt.vodsl  ProvDM.vodsl  STC.vodsl  STC2_20151030.vodsl  STCPrototype-2.0.vodsl  SourceDM.vodsl  SpectrumDM.vodsl  build.xml  example.vodsl  test.vodsl  vo-dml2dsl.xsl  xmi2dsl.xsl
net.ivoa.vodml/: .gitignore  build.properties  plugin.xml  pom.xml
net.ivoa.vodml.ide/: build.properties  pom.xml
net.ivoa.vodml.sdk/: feature.xml  pom.xml
net.ivoa.vodml.ui/: .gitignore  build.properties  plugin.xml  pom.xml
net.ivoa.vodsl.ide/: pom.xml
net.ivoa.vodsl.sdk/: feature.xml  pom.xml
net.ivoa.vodsl.tests/: .gitignore  pom.xml
net.ivoa.vodsl.ui.tests/: pom.xml
vodsl.python/: Readme.md  generate_grammar.py  plan-pythonVodslParser..md  pyproject.toml  requirements.txt
vodsl.python/src/vodsl/: __init__.py  cli.py  generator.py  parser.py  schema_validator.py  scoping.py  validator.py
vodsl.python/tests/: conftest.py  test_generator.py  test_integration.py  test_parser.py  test_transpiler.py  test_validator.py
vodsl.python/tests/fixtures/: .gitignore
(+108 files in other folders)
